additional fix for navbar to prevent dark-bg overlap under 979px

--- a/pylowiki/public/styles/civ.css
+++ b/pylowiki/public/styles/civ.css
@@ -11,6 +11,8 @@ html,body{
   }
   .navbar-fixed-top .navbar-inner, .navbar-fixed-bottom .navbar-inner {
     padding: 0px;
+    position: relative;
+    z-index: 2;
   }
 }
 
